Bug 170094 - FILESAVE: PPTX -> PPTX SmartArts don't preserve hyperlinks
Summary: FILESAVE: PPTX -> PPTX SmartArts don't preserve hyperlinks
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.8.0
Keywords: filter:pptx
Depends on:
Blocks: OOXML-SmartArt
  Show dependency treegraph
 
Reported: 2025-12-23 08:43 UTC by Karthik
Modified: 2026-01-27 14:43 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
PPTX File (85.98 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-12-23 08:44 UTC, Karthik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karthik 2025-12-23 08:43:35 UTC
Description:
Open the attached PPTX file and save it as PPTX, the resulting file can't be opened in PowerPoint

OOXML validator gives the below error
```
{
    "Description": "The relationship 'rId4' referenced by attribute 'http://schemas.openxmlformats.org/officeDocument/2006/relationships:id' does not exist.",
    "Path": {
      "Namespaces": {},
      "XPath": "/dgm:dataModel[1]/dgm:ptLst[1]/dgm:pt[17]/dgm:t[1]/a:p[1]/a:r[2]/a:rPr[1]/a:hlinkClick[1]",
      "PartUri": "/ppt/diagrams/data1.xml"
    },
    "Id": "Sem_InvalidRelationshipId",
    "ErrorType": "Semantic"
  }
```

For SmartArts we are exporting the DOM as it is but we are not exporting the `.xml.rels` file. Only image relations are preserved in the roundtrip. Hyperlinks are not handled. This leads to XML having relationship IDs which are not present.

Steps to Reproduce:
1. Open the attached PPTX file
2. Save it in LO
3. Open the resulting file in PowerPoint

Actual Results:
PowerPoint fails to open the file

Expected Results:
PowerPoint opens the file without any problem


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 22; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Calc: threaded
Comment 1 Karthik 2025-12-23 08:44:37 UTC
Created attachment 204759 [details]
PPTX File
Comment 2 Commit Notification 2026-01-27 13:38:26 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/58aaf1b33a35885b595e23a97611ca157c015e7d

tdf#170094: PPTX->PPTX export SmartArt hyperlinks

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.