tdf#170094: PPTX->PPTX export SmartArt hyperlinks

SmartArt hyperlinks are not preserved after roundtrip. This leads
to XML having relationship IDs which are invalid.

Change-Id: I3fa3d6f79b8eb8d086b1061d26c30568e3b5793f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196152
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
(cherry picked from commit 8a049c8a1482260f0ffe85b6da8c5e8834c20652)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198182
Tested-by: Jenkins